RESOLVED FIXED311416
m_isFocusingWithValidationMessage breaks bit packing in ValidatedFormListedElement
https://bugs.webkit.org/show_bug.cgi?id=311416
Summary m_isFocusingWithValidationMessage breaks bit packing in ValidatedFormListedEl...
Chris Dumez
Reported 2026-04-03 07:39:04 PDT
m_isFocusingWithValidationMessage breaks bit packing in ValidatedFormListedElement.
Attachments
Chris Dumez
Comment 1 2026-04-03 07:43:17 PDT
EWS
Comment 2 2026-04-04 00:44:01 PDT
Committed 310563@main (0d55646bbb0e): <https://commits.webkit.org/310563@main> Reviewed commits have been landed. Closing PR #61978 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-04 00:45:12 PDT
Note You need to log in before you can comment on or make changes to this bug.