m_isFocusingWithValidationMessage breaks bit packing in ValidatedFormListedElement https://bugs.webkit.org/show_bug.cgi?id=311416

Reviewed by Anne van Kesteren.

Every other bool member uses : 1. This one does not, breaking the bit
field packing. It forces the compiler to end the bitfield, allocate a
separate byte for this bool, then potentially pad before
`m_isInsideDataList : 2`.

Bit-fields can't bind to non-const references, so SetForScope doesn't
work with them directly. I thus had to use another pattern in
focusAndShowValidationMessage().

* Source/WebCore/html/ValidatedFormListedElement.cpp:
(WebCore::ValidatedFormListedElement::focusAndShowValidationMessage):
* Source/WebCore/html/ValidatedFormListedElement.h:

Canonical link: https://commits.webkit.org/310563@main